<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings" >
        <EditTextPreference
            android:title="@string/flid"
            android:summary="@string/flid_sum"
            android:defaultValue="@string/flid_val"
            android:key="prefFlid"/>
        <Preference
                android:title="@string/directory"
                android:summary="@string/directory_sum"
                android:defaultValue=""
                android:dependency="prefExternal"
                android:key="prefDirectory" >
        </Preference>
        <CheckBoxPreference
            android:title="@string/dailydownload"
            android:summary="@string/dailydownload_sum"
            android:defaultValue="false"
            android:key="prefDailyDownload" />
        <EditTextPreference
            android:title="@string/hour"
            android:summary="@string/hour_sum"
            android:defaultValue="@string/hour_val"
            android:key="prefHour"
            android:dependency="prefDailyDownload" />
        <EditTextPreference
            android:title="@string/minute"
            android:summary="@string/minute_sum"
            android:defaultValue="@string/minute_val"
            android:key="prefMinute"
            android:dependency="prefDailyDownload" />
        <CheckBoxPreference
            android:title="@string/auto"
            android:summary="@string/pref_auto"
            android:defaultValue="true"
            android:dependency="prefDailyDownload"
            android:key="prefAuto" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/adv_set">
        <CheckBoxPreference
            android:title="@string/external_browser"
            android:summary="@string/external_sum"
            android:defaultValue="false"
            android:key="prefExternal"
            android:disableDependentsState="true" />
        <CheckBoxPreference
            android:title="@string/wifionly"
            android:summary="@string/wifi_sum"
            android:defaultValue="true"
            android:key="prefWIFI"
            android:dependency="prefExternal" />
        <EditTextPreference
            android:title="@string/base_url"
            android:summary="@string/base_sum"
            android:defaultValue="@string/base_val"
            android:key="prefBase"/>
        <!--
        <EditTextPreference
                android:title="@string/urlext"
                android:summary="@string/urlext_sum"
                android:defaultValue="@string/urlext_val"
                android:key="prefUrlext" /> -->
        <EditTextPreference
            android:title="@string/selector"
            android:summary="@string/selector_sum"
            android:defaultValue="@string/selector_val"
            android:key="prefSelector"/>
        <EditTextPreference
            android:title="@string/mirrorurl"
            android:summary="@string/mirrorurl_sum"
            android:defaultValue="@string/mirrorurl_val"
            android:key="prefMirrorURL" />
        <EditTextPreference
            android:title="@string/mirrordata"
            android:summary="@string/mirrordata_sum"
            android:defaultValue="@string/mirrordata_val"
            android:key="prefMirrorData" />
    </PreferenceCategory>
</PreferenceScreen>